Programming languages and paradigms/Emilia Programming Language/src/Bnfc/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Bnfc/Par.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListStmt                                (4)
	Block -> '{' ListStmt '}'                          (5)
	ListStmt ->                                        (6)
	ListStmt -> Stmt                                   (7)
	ListStmt -> Stmt ';' ListStmt                      (8)
	Stmt -> Ident ':=' Expr                            (9)
	Stmt -> 'pass'                                     (10)
	Stmt -> Ident '<-' Expr                            (11)
	Stmt -> 'if' Expr ':' Block                        (12)
	Stmt -> 'if' Expr ':' Block 'else' ':' Block       (13)
	Stmt -> 'while' Expr ':' Block                     (14)
	Stmt -> Expr                                       (15)
	Stmt -> 'return' Expr                              (16)
	Stmt -> 'return'                                   (17)
	Expr6 -> Ident                                     (18)
	Expr6 -> Integer                                   (19)
	Expr6 -> 'True'                                    (20)
	Expr6 -> 'False'                                   (21)
	Expr6 -> '(' ListArg ')' '->' Type '(' Expr ')'    (22)
	Expr6 -> '(' ListArg ')' '->' Type ':' Block       (23)
	Expr6 -> Ident '(' ListExpr ')'                    (24)
	Expr6 -> String                                    (25)
	Expr6 -> '(' Expr ')'                              (26)
	Arg -> Ident '|' ArgType                           (27)
	ListArg ->                                         (28)
	ListArg -> Arg                                     (29)
	ListArg -> Arg ',' ListArg                         (30)
	Expr5 -> Expr5 '++' Expr6                          (31)
	Expr5 -> '-' Expr6                                 (32)
	Expr5 -> 'not' Expr6                               (33)
	Expr5 -> Expr6                                     (34)
	Expr4 -> Expr4 MulOp Expr5                         (35)
	Expr4 -> Expr5                                     (36)
	Expr3 -> Expr3 AddOp Expr4                         (37)
	Expr3 -> Expr4                                     (38)
	Expr2 -> Expr2 RelOp Expr3                         (39)
	Expr2 -> Expr2 '=' Expr3                           (40)
	Expr2 -> Expr2 '!=' Expr3                          (41)
	Expr2 -> Expr3                                     (42)
	Expr1 -> Expr2 '&&' Expr1                          (43)
	Expr1 -> Expr2                                     (44)
	Expr -> Expr1 '||' Expr                            (45)
	Expr -> Expr1                                      (46)
	ListExpr ->                                        (47)
	ListExpr -> Expr                                   (48)
	ListExpr -> Expr ',' ListExpr                      (49)
	Type -> 'Int'                                      (50)
	Type -> 'Str'                                      (51)
	Type -> 'Bool'                                     (52)
	Type -> 'Void'                                     (53)
	Type -> '(' ListArgType ')' '->' Type              (54)
	ListArgType ->                                     (55)
	ListArgType -> ArgType                             (56)
	ListArgType -> ArgType ',' ListArgType             (57)
	ArgType -> Type                                    (58)
	ArgType -> '*' Type                                (59)
	AddOp -> '+'                                       (60)
	AddOp -> '-'                                       (61)
	MulOp -> '*'                                       (62)
	MulOp -> '/'                                       (63)
	MulOp -> '%'                                       (64)
	RelOp -> '<'                                       (65)
	RelOp -> '<='                                      (66)
	RelOp -> '>'                                       (67)
	RelOp -> '>='                                      (68)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'%'            { PT _ (TS _ 2) }
	'&&'           { PT _ (TS _ 3) }
	'('            { PT _ (TS _ 4) }
	')'            { PT _ (TS _ 5) }
	'*'            { PT _ (TS _ 6) }
	'+'            { PT _ (TS _ 7) }
	'++'           { PT _ (TS _ 8) }
	','            { PT _ (TS _ 9) }
	'-'            { PT _ (TS _ 10) }
	'->'           { PT _ (TS _ 11) }
	'/'            { PT _ (TS _ 12) }
	':'            { PT _ (TS _ 13) }
	':='           { PT _ (TS _ 14) }
	';'            { PT _ (TS _ 15) }
	'<'            { PT _ (TS _ 16) }
	'<-'           { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'>'            { PT _ (TS _ 20) }
	'>='           { PT _ (TS _ 21) }
	'Bool'         { PT _ (TS _ 22) }
	'False'        { PT _ (TS _ 23) }
	'Int'          { PT _ (TS _ 24) }
	'Str'          { PT _ (TS _ 25) }
	'True'         { PT _ (TS _ 26) }
	'Void'         { PT _ (TS _ 27) }
	'else'         { PT _ (TS _ 28) }
	'if'           { PT _ (TS _ 29) }
	'not'          { PT _ (TS _ 30) }
	'pass'         { PT _ (TS _ 31) }
	'return'       { PT _ (TS _ 32) }
	'while'        { PT _ (TS _ 33) }
	'{'            { PT _ (TS _ 34) }
	'|'            { PT _ (TS _ 35) }
	'||'           { PT _ (TS _ 36) }
	'}'            { PT _ (TS _ 37) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	Block           rule  5
	ListStmt        rules 6, 7, 8
	Stmt            rules 9, 10, 11, 12, 13, 14, 15, 16, 17
	Expr6           rules 18, 19, 20, 21, 22, 23, 24, 25, 26
	Arg             rule  27
	ListArg         rules 28, 29, 30
	Expr5           rules 31, 32, 33, 34
	Expr4           rules 35, 36
	Expr3           rules 37, 38
	Expr2           rules 39, 40, 41, 42
	Expr1           rules 43, 44
	Expr            rules 45, 46
	ListExpr        rules 47, 48, 49
	Type            rules 50, 51, 52, 53, 54
	ListArgType     rules 55, 56, 57
	ArgType         rules 58, 59
	AddOp           rules 60, 61
	MulOp           rules 62, 63, 64
	RelOp           rules 65, 66, 67, 68

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'('            shift, and enter state 16
	'-'            shift, and enter state 17
	'False'        shift, and enter state 18
	'True'         shift, and enter state 19
	'if'           shift, and enter state 20
	'not'          shift, and enter state 21
	'pass'         shift, and enter state 22
	'return'       shift, and enter state 23
	'while'        shift, and enter state 24
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 25
	L_quoted       shift, and enter state 26
	%eof           reduce using rule 6

	Ident          goto state 3
	Integer        goto state 4
	String         goto state 5
	Program        goto state 6
	ListStmt       goto state 7
	Stmt           goto state 8
	Expr6          goto state 9
	Expr5          goto state 10
	Expr4          goto state 11
	Expr3          goto state 12
	Expr2          goto state 13
	Expr1          goto state 14
	Expr           goto state 15

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	':='           reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<-'           reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'|'            reduce using rule 1
	'||'           reduce using rule 1
	'}'            reduce using rule 1
	%eof           reduce using rule 1


State 3

	Stmt -> Ident . ':=' Expr                           (rule 9)
	Stmt -> Ident . '<-' Expr                           (rule 11)
	Expr6 -> Ident .                                    (rule 18)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 24)

	'!='           reduce using rule 18
	'%'            reduce using rule 18
	'&&'           reduce using rule 18
	'('            shift, and enter state 55
	'*'            reduce using rule 18
	'+'            reduce using rule 18
	'++'           reduce using rule 18
	'-'            reduce using rule 18
	'/'            reduce using rule 18
	':='           shift, and enter state 56
	';'            reduce using rule 18
	'<'            reduce using rule 18
	'<-'           shift, and enter state 57
	'<='           reduce using rule 18
	'='            reduce using rule 18
	'>'            reduce using rule 18
	'>='           reduce using rule 18
	'||'           reduce using rule 18
	'}'            reduce using rule 18
	%eof           reduce using rule 18


State 4

	Expr6 -> Integer .                                  (rule 19)

	'!='           reduce using rule 19
	'%'            reduce using rule 19
	'&&'           reduce using rule 19
	')'            reduce using rule 19
	'*'            reduce using rule 19
	'+'            reduce using rule 19
	'++'           reduce using rule 19
	','            reduce using rule 19
	'-'            reduce using rule 19
	'/'            reduce using rule 19
	':'            reduce using rule 19
	';'            reduce using rule 19
	'<'            reduce using rule 19
	'<='           reduce using rule 19
	'='            reduce using rule 19
	'>'            reduce using rule 19
	'>='           reduce using rule 19
	'||'           reduce using rule 19
	'}'            reduce using rule 19
	%eof           reduce using rule 19


State 5

	Expr6 -> String .                                   (rule 25)

	'!='           reduce using rule 25
	'%'            reduce using rule 25
	'&&'           reduce using rule 25
	')'            reduce using rule 25
	'*'            reduce using rule 25
	'+'            reduce using rule 25
	'++'           reduce using rule 25
	','            reduce using rule 25
	'-'            reduce using rule 25
	'/'            reduce using rule 25
	':'            reduce using rule 25
	';'            reduce using rule 25
	'<'            reduce using rule 25
	'<='           reduce using rule 25
	'='            reduce using rule 25
	'>'            reduce using rule 25
	'>='           reduce using rule 25
	'||'           reduce using rule 25
	'}'            reduce using rule 25
	%eof           reduce using rule 25


State 6

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 7

	Program -> ListStmt .                               (rule 4)

	%eof           reduce using rule 4


State 8

	ListStmt -> Stmt .                                  (rule 7)
	ListStmt -> Stmt . ';' ListStmt                     (rule 8)

	';'            shift, and enter state 54
	'}'            reduce using rule 7
	%eof           reduce using rule 7


State 9

	Expr5 -> Expr6 .                                    (rule 34)

	'!='           reduce using rule 34
	'%'            reduce using rule 34
	'&&'           reduce using rule 34
	')'            reduce using rule 34
	'*'            reduce using rule 34
	'+'            reduce using rule 34
	'++'           reduce using rule 34
	','            reduce using rule 34
	'-'            reduce using rule 34
	'/'            reduce using rule 34
	':'            reduce using rule 34
	';'            reduce using rule 34
	'<'            reduce using rule 34
	'<='           reduce using rule 34
	'='            reduce using rule 34
	'>'            reduce using rule 34
	'>='           reduce using rule 34
	'||'           reduce using rule 34
	'}'            reduce using rule 34
	%eof           reduce using rule 34


State 10

	Expr5 -> Expr5 . '++' Expr6                         (rule 31)
	Expr4 -> Expr5 .                                    (rule 36)

	'!='           reduce using rule 36
	'%'            reduce using rule 36
	'&&'           reduce using rule 36
	')'            reduce using rule 36
	'*'            reduce using rule 36
	'+'            reduce using rule 36
	'++'           shift, and enter state 53
	','            reduce using rule 36
	'-'            reduce using rule 36
	'/'            reduce using rule 36
	':'            reduce using rule 36
	';'            reduce using rule 36
	'<'            reduce using rule 36
	'<='           reduce using rule 36
	'='            reduce using rule 36
	'>'            reduce using rule 36
	'>='           reduce using rule 36
	'||'           reduce using rule 36
	'}'            reduce using rule 36
	%eof           reduce using rule 36


State 11

	Expr4 -> Expr4 . MulOp Expr5                        (rule 35)
	Expr3 -> Expr4 .                                    (rule 38)

	'!='           reduce using rule 38
	'%'            shift, and enter state 50
	'&&'           reduce using rule 38
	')'            reduce using rule 38
	'*'            shift, and enter state 51
	'+'            reduce using rule 38
	','            reduce using rule 38
	'-'            reduce using rule 38
	'/'            shift, and enter state 52
	':'            reduce using rule 38
	';'            reduce using rule 38
	'<'            reduce using rule 38
	'<='           reduce using rule 38
	'='            reduce using rule 38
	'>'            reduce using rule 38
	'>='           reduce using rule 38
	'||'           reduce using rule 38
	'}'            reduce using rule 38
	%eof           reduce using rule 38

	MulOp          goto state 49

State 12

	Expr3 -> Expr3 . AddOp Expr4                        (rule 37)
	Expr2 -> Expr3 .                                    (rule 42)

	'!='           reduce using rule 42
	'&&'           reduce using rule 42
	')'            reduce using rule 42
	'+'            shift, and enter state 47
	','            reduce using rule 42
	'-'            shift, and enter state 48
	':'            reduce using rule 42
	';'            reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'='            reduce using rule 42
	'>'            reduce using rule 42
	'>='           reduce using rule 42
	'||'           reduce using rule 42
	'}'            reduce using rule 42
	%eof           reduce using rule 42

	AddOp          goto state 46

State 13

	Expr2 -> Expr2 . RelOp Expr3                        (rule 39)
	Expr2 -> Expr2 . '=' Expr3                          (rule 40)
	Expr2 -> Expr2 . '!=' Expr3                         (rule 41)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 43)
	Expr1 -> Expr2 .                                    (rule 44)

	'!='           shift, and enter state 39
	'&&'           shift, and enter state 40
	')'            reduce using rule 44
	','            reduce using rule 44
	':'            reduce using rule 44
	';'            reduce using rule 44
	'<'            shift, and enter state 41
	'<='           shift, and enter state 42
	'='            shift, and enter state 43
	'>'            shift, and enter state 44
	'>='           shift, and enter state 45
	'||'           reduce using rule 44
	'}'            reduce using rule 44
	%eof           reduce using rule 44

	RelOp          goto state 38

State 14

	Expr -> Expr1 . '||' Expr                           (rule 45)
	Expr -> Expr1 .                                     (rule 46)

	')'            reduce using rule 46
	','            reduce using rule 46
	':'            reduce using rule 46
	';'            reduce using rule 46
	'||'           shift, and enter state 37
	'}'            reduce using rule 46
	%eof           reduce using rule 46


State 15

	Stmt -> Expr .                                      (rule 15)

	';'            reduce using rule 15
	'}'            reduce using rule 15
	%eof           reduce using rule 15


State 16

	Expr6 -> '(' . ListArg ')' '->' Type '(' Expr ')'    (rule 22)
	Expr6 -> '(' . ListArg ')' '->' Type ':' Block      (rule 23)
	Expr6 -> '(' . Expr ')'                             (rule 26)

	'('            shift, and enter state 16
	')'            reduce using rule 28
	'-'            shift, and enter state 17
	'False'        shift, and enter state 18
	'True'         shift, and enter state 19
	'not'          shift, and enter state 21
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 25
	L_quoted       shift, and enter state 26

	Ident          goto state 33
	Integer        goto state 4
	String         goto state 5
	Expr6          goto state 9
	Arg            goto state 34
	ListArg        goto state 35
	Expr5          goto state 10
	Expr4          goto state 11
	Expr3          goto state 12
	Expr2          goto state 13
	Expr1          goto state 14
	Expr           goto state 36

State 17

	Expr5 -> '-' . Expr6                                (rule 32)

	'('            shift, and enter state 16
	'False'        shift, and enter state 18
	'True'         shift, and enter state 19
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 25
	L_quoted       shift, and enter state 26

	Ident          goto state 27
	Integer        goto state 4
	String         goto state 5
	Expr6          goto state 32

State 18

	Expr6 -> 'False' .                                  (rule 21)

	'!='           reduce using rule 21
	'%'            reduce using rule 21
	'&&'           reduce using rule 21
	')'            reduce using rule 21
	'*'            reduce using rule 21
	'+'            reduce using rule 21
	'++'           reduce using rule 21
	','            reduce using rule 21
	'-'            reduce using rule 21
	'/'            reduce using rule 21
	':'            reduce using rule 21
	';'            reduce using rule 21
	'<'            reduce using rule 21
	'<='           reduce using rule 21
	'='            reduce using rule 21
	'>'            reduce using rule 21
	'>='           reduce using rule 21
	'||'           reduce using rule 21
	'}'            reduce using rule 21
	%eof           reduce using rule 21


State 19

	Expr6 -> 'True' .                                   (rule 20)

	'!='           reduce using rule 20
	'%'            reduce using rule 20
	'&&'           reduce using rule 20
	')'            reduce using rule 20
	'*'            reduce using rule 20
	'+'            reduce using rule 20
	'++'           reduce using rule 20
	','            reduce using rule 20
	'-'            reduce using rule 20
	'/'            reduce using rule 20
	':'            reduce using rule 20
	';'            reduce using rule 20
	'<'            reduce using rule 20
	'<='           reduce using rule 20
	'='            reduce using rule 20
	'>'            reduce using rule 20
	'>='           reduce using rule 20
	'||'           reduce using rule 20
	'}'            reduce using rule 20
	%eof           reduce using rule 20


State 20

	Stmt -> 'if' . Expr ':' Block                       (rule 12)
	Stmt -> 'if' . Expr ':' Block 'else' ':' Block      (rule 13)

	'('            shift, and enter state 16
	'-'            shift, and enter state 17
	'False'        shift, and enter state 18
	'True'         shift, and enter state 19
	'not'          shift, and enter state 21
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 25
	L_quoted       shift, and enter state 26

	Ident          goto state 27
	Integer        goto state 4
	String         goto state 5
	Expr6          goto state 9
	Expr5          goto state 10
	Expr4          goto state 11
	Expr3          goto state 12
	Expr2          goto state 13
	Expr1          goto state 14
	Expr           goto state 31

State 21
